-made sure "sc" handler is installed before using it

--- a/loader/Makefile.cube
+++ b/loader/Makefile.cube
@@ -36,7 +36,7 @@ ASFLAGS = -DHW_DOL=1 -D_LANGUAGE_ASSEMBLY
 TARGET_LINKED = loader.elf
 TARGET_DOL = loader.dol
 
-OBJS = crt0.o cache_asm.o system_asm.o argv.o main.o xz_crc32.o xz_dec_bcj.o xz_dec_lzma2.o xz_dec_stream.o 
+OBJS = crt0.o cache_asm.o exception_handler.o system_asm.o argv.o main.o xz_crc32.o xz_dec_bcj.o xz_dec_lzma2.o xz_dec_stream.o 
 
 DEPDIR = .deps
 
